--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
+application.properties
 .idea
 *.iws
 *.iml
@@ -33,8 +34,6 @@ out/
 /nbdist/
 /.nb-gradle/
 
-### Application Setting File ###
-src/main/resources/application.properties
 
 ### VS Code ###
 .vscode/
