--- a/CRUDPractice/.gitignore
+++ b/CRUDPractice/.gitignore
@@ -146,4 +146,4 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,gradle,java
 
 ### Application Setting ###
-application.properties
+**/application.properties
